# waveform-resource

./: .gitignore  COPYING  Makefile.am  README.md  SPONSOR  cloudbuild.yaml  configure.ac  setup.py.in  waveform-resource.spec.in
ci/fedora/37/: Dockerfile
ci/rockylinux/8/: Dockerfile
ci/rockylinux/8.5/: Dockerfile
ci/ubuntu/20.04/: Dockerfile
ci/ubuntu/22.04/: Dockerfile
debian/: changelog.in  control  rules
scripts/: waveform-resourced
waveform_resource/: __init__.py
waveform_resource/interface/: __init__.py  plugin.py
waveform_resource/plugins/: __init__.py
waveform_resource/service/: __init__.py  channel.py  context.py  manager.py  multicastchannel.py  tcpchannel.py  udpchannel.py
